[gd_scene load_steps=24 format=3 uid="uid://daaedgpnenvv1"]

[ext_resource type="Theme" uid="uid://4s2i76go0wv0" path="res://UI/menu.theme" id="1_olc6f"]
[ext_resource type="Script" path="res://UI/pause_menu.gd" id="2_bqjf3"]
[ext_resource type="Script" path="res://UI/Quit.gd" id="3_ajuc3"]
[ext_resource type="Script" path="res://UI/inventory.gd" id="3_b0nuj"]
[ext_resource type="Script" path="res://UI/map.gd" id="4_3rhs4"]
[ext_resource type="Material" uid="uid://v4v7bo4ibncj" path="res://Materials/map.tres" id="4_k8vcs"]
[ext_resource type="Texture2D" uid="uid://bf0x7ipgu3fu1" path="res://Map/map01.png" id="5_f6l7r"]
[ext_resource type="Texture2D" uid="uid://bec0anw4g3ktp" path="res://Map/map02.png" id="6_8167e"]
[ext_resource type="Texture2D" uid="uid://c665n6d1sm0cy" path="res://Map/map03.png" id="7_v8vmx"]
[ext_resource type="Texture2D" uid="uid://b2xq64odb2o2n" path="res://Map/map04.png" id="8_l1osr"]
[ext_resource type="Shader" path="res://UI/shiny.gdshader" id="10_dv2l3"]
[ext_resource type="Texture2D" uid="uid://b8adn2ttyug18" path="res://Map/map05.png" id="10_ik00s"]
[ext_resource type="AudioStream" uid="uid://cqqin6a5txvuo" path="res://Sounds/open_map.wav" id="13_mq7ir"]
[ext_resource type="AudioStream" uid="uid://b6cl6emltg4vf" path="res://Sounds/close_map.wav" id="14_a2sma"]
[ext_resource type="AudioStream" uid="uid://cy0hx0wj5dbxk" path="res://Sounds/map_magic.wav" id="15_pwlxs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xvnyl"]
atlas = ExtResource("5_f6l7r")
region = Rect2(0, 0, 1024, 1024)
margin = Rect2(-24, -60, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vxky"]
atlas = ExtResource("6_8167e")
region = Rect2(0, 0, 1024, 1024)
margin = Rect2(-30, 22, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3sw"]
atlas = ExtResource("7_v8vmx")
region = Rect2(0, 0, 1024, 1024)
margin = Rect2(40, 24, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kwlk"]
atlas = ExtResource("8_l1osr")
region = Rect2(0, 0, 1024, 1024)
margin = Rect2(36, -24, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b3j1g"]
shader = ExtResource("10_dv2l3")
shader_parameter/width = 0.3
shader_parameter/time = 0.0
shader_parameter/color = Color(1, 1, 1, 0.803922)

[sub_resource type="Animation" id="Animation_c3qer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect:texture:margin")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-24, -60, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect2:texture:margin")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-30, 22, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect3:texture:margin")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(40, 24, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect4:texture:margin")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(36, -24, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map:tick")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_72ttk"]
resource_name = "map_complete"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect:texture:margin")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(-24, -60, 0, 0), Rect2(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect2:texture:margin")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(-30, 22, 0, 0), Rect2(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect3:texture:margin")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(40, 24, 0, 0), Rect2(0, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map/TextureRect4:texture:margin")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(36, -24, 0, 0), Rect2(0, 0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map:tick")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Magic")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6as02"]
_data = {
"RESET": SubResource("Animation_c3qer"),
"map_complete": SubResource("Animation_72ttk")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_olc6f")
script = ExtResource("2_bqjf3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.427451, 0.458824, 0.901961)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.39

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Inventory"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Inventory" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_b0nuj")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "sensitivity"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "sounds"
horizontal_alignment = 1

[node name="HSlider2" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 20.0
step = 0.1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "music"
horizontal_alignment = 1

[node name="HSlider3" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 20.0
step = 0.1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("3_ajuc3")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Treasure Map"

[node name="Map" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 65
theme_override_constants/margin_bottom = 19
script = ExtResource("4_3rhs4")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map"]
material = ExtResource("4_k8vcs")
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_xvnyl")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map"]
material = ExtResource("4_k8vcs")
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_6vxky")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map"]
material = ExtResource("4_k8vcs")
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_6c3sw")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map"]
material = ExtResource("4_k8vcs")
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_2kwlk")
expand_mode = 2
stretch_mode = 4

[node name="Shiny" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Map"]
material = SubResource("ShaderMaterial_b3j1g")
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("10_ik00s")
expand_mode = 2
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6as02")
}

[node name="OpenMap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_mq7ir")
volume_db = -3.0
bus = &"sfx"

[node name="CloseMap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_a2sma")
volume_db = -2.0
bus = &"sfx"

[node name="Magic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_pwlxs")
volume_db = -5.0
bus = &"sfx"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button" to="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button" method="_on_pressed"]
